# arduino_magnetic_sensor

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
config/: config_generate_h5py.json  slip_model_training_data.json  slip_model_training_data_0.json  slip_model_training_data_1.json  slip_model_training_data_2.json  slip_model_training_data_3.json  slip_model_training_data_4.json  uskin4_tags.json
data/nes_sensitivity/: big-heavy-soft-cilia-readings.csv  big-heavy-soft-cilia.csv  big-heavy-soft-nocilia-1_2021-11-08-15-26-14.bag  big-heavy-soft-nocilia-readings.csv  big-heavy-soft-nocilia.csv  big-light-soft-cilia-1_2021-11-08-15-27-40.bag  big-light-soft-cilia-readings.csv  big-light-soft-cilia.csv  big-light-soft-nocilia-1_2021-11-08-15-25-18.bag  big-light-soft-nocilia-readings.csv  big-light-soft-nocilia.csv  nes_sensitivity_analysis.ipynb  sensitivity_from_csv.ipynb  small-light-soft-nocilia-1_2021-11-08-15-23-44.bag
data/nes_sensitivity/bags/: big-heavy-soft-cilia-1_2021-11-08-15-28-51.bag
firmware/: CMakeLists.txt  arduino-server.cpp  test.cpp  xSensorData.h  xServerMsg.h
launch/: data_visualization.launch  generate_h5py.launch  grid_map_visualization.launch  sensor_server.launch  start_server.launch  start_server2.launch
msg/: xServerMsg.msg
nodes/: output.csv  sensitivity_bag_to_csv  sensitivity_experiment
rviz/: config.rviz
scripts/: generate_h5py.py  load_exp.py  pandas_df_manipulation.py  slip_model_export.py  temporal_viz.py
src/: calibrate_data.cpp  grid_map_ploter.cpp
src/arduino_magnetic_sensor/: __init__.py  load_tactile_data.py
